legacy/1.0/kubernetes/smart-home/home-assistant/service-coder.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: smart-home
  labels:
    app: hassio
spec:
  type: ClusterIP
  selector:
    app: hassio
  ports:
    - port: 12321
      name: code-http
      targetPort: code-http
      protocol: TCP
