legacy/1.0/kubernetes/smart-home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hassio
  namespace: smart-home
  labels:
    app: hassio
spec:
  type: ClusterIP
  selector:
    app: hassio
  ports:
    - port: 8123
      name: http
      targetPort: http
      protocol: TCP
